ART 3.0
* Fix for incorrect handling of " within lov parameter values
* Reorganised the code for easier maintenance and enhanced user experience
 - now using maven, spring mvc, jquery ui, datatables,
 - twitter bootstrap, font awesome
* Enable multi parameter to act as a chained parameter master
* Allow chained parameter slave to have default values
* Improved support for sun jdbc-odbc bridge driver
* Allow datasources to be disabled
* Renamed "Report on Column" query types to "Group"
* Renamed "Graph" query types to "Chart"
* Updated cewolf to 1.2.4

ART 2.5.2
* Fix for error when drill down column has a null value
* Updated French translation (thanks to Eric Lemesre)
* Minor html tag corrections (thanks to Eric Lemesre)
* Left align text in htmlDataTable and htmlPlain view modes
* Added DataTable translations for Spanish and Portuguese
* Allow display of 0 for numbers when value is null
* Allow chained parameter lov to use dynamic datasource filter
* Left align first column text in crosstab queries

ART 2.5.1
* Added Portuguese translation (thanks to Edson Richter)
* Added Spanish translation (thanks to Carlos Narvaez)
* Updated French translation (thanks to Eric Lemesre)
* Allow custom path for export files (thanks to ckb)
* Enable display of blank space instead of "null" for null fields (thanks to ckb)
* Fix for query name truncated to 25 characters
* Fix for start query not displaying
* Fix for invalid drill down queries link
* Fix for not being able to define email jobs in Italian and Portuguese locales
* Added some 2D charts
* Allow use of jndi datasources
* Allow rename and move of queries from the query management console
* Allow xy chart to have multiple series
* Have show results inline as an application setting
* Enable show/hide of parameters box
* Allow specification of random start time for jobs 
* Made graph x-axis label rotate and remove options configurable per query
* Automatically compile all subreports in a jasper report