@@ -277,7 +277,7 @@ jobWillNeverExecute = Job will never execute. Please change the schedule details
 jobs.button.delete    = Delete
 jobs.button.edit      = Edit
 jobs.button.refresh   = Refresh
-jobs.button.run       = Run Now
+jobs.button.run       = Run
 jobs.text.action      = Action
 jobs.text.jobId       = Job ID
 jobs.text.jobName     = Job Name
